fix(修改命题): add link text

--- a/neuron/b2478280.md
+++ b/neuron/b2478280.md
@@ -9,6 +9,6 @@ date: 2021-08-07T17:54
 修改命题会创建一个新的命题：
 
 -   内容在原命题的基础上修改
--   可以选择性地复制与原命题相关的 [[9138a0f0|关联]] 与 [[87de6d37]]
+-   可以选择性地复制与原命题相关的 [[9138a0f0|关联]] 与 [[87de6d37|逻辑表达式]]
 
 修改命题会形成一个树状结构（一般情况下都是线性的），在查看其中某个命题时可以在这棵树上浏览，并且如果命题被修改过会提示用户查看修改版，而尽量不要对旧版命题 [[e1004d37|表态]]，再次修改也推荐在最新版的基础上修改。除此之外，新旧命题是两个独立的命题，没有什么联系。
