feat: add operation: reaction request

--- a/neuron/c0f5c4f6.md
+++ b/neuron/c0f5c4f6.md
@@ -10,6 +10,7 @@ date: 2021-08-07T17:12
 -   查看每个态度有多少人，以及具体名单
 -   分别列出能够推出该命题正确/错误的推导；可以选择只列出在自己已有表态下能够推出的，屏蔽在自己已有表态下无法推出的（默认），或者列出所有
 -   询问一个已表态的用户表态的原因
+-   请求一个未表态用户进行表态
 -   [[83163443]]#
 -   分别查看两个方向的 [[e4cc5cb4]] 列表
 -   创建到其它命题的推导
